child-modules/networking-dns-ecs-rds-s3/ecs-application-lb.tf
# create ECS application load balancer
resource "aws_lb" "load-balancer" {
  name               = "${var.project_name}-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = ["${aws_security_group.sg.id}"]
  subnets            = [aws_subnet.public-subnets-web[0].id, aws_subnet.public-subnets-web[1].id]
  enable_deletion_protection = false

  tags   = {
    Name = "${var.project_name}-load-balancer"
  }
}
